[gd_scene load_steps=2 format=3 uid="uid://merchant_ui_001"]

[ext_resource type="Script" path="res://scripts/ui/merchant/merchant_ui.gd" id="1_merchant_ui"]

[sub_resource type="StyleBoxFlat" id="1_panel_style"]
bg_color = Color(0.25, 0.2, 0.15, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.3, 0.25, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MerchantUI" type="CanvasLayer"]
layer = 20
script = ExtResource("1_merchant_ui")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
visible = false

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("1_panel_style")

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MerchantName" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Merchant"
horizontal_alignment = 1

[node name="Greeting" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Welcome, traveler!"
horizontal_alignment = 1

[node name="TopSeparator" type="HSeparator" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="StockPanel" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/StockPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "For Sale"
horizontal_alignment = 1

[node name="StockList" type="ItemList" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/StockPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
custom_minimum_size = Vector2(200, 0)

[node name="InventoryPanel" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/InventoryPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Your Items"
horizontal_alignment = 1

[node name="InventoryList" type="ItemList" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/InventoryPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
custom_minimum_size = Vector2(200, 0)

[node name="BottomSeparator" type="HSeparator" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TransactionContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="BuyButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TransactionContainer"]
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "Buy"

[node name="SellButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TransactionContainer"]
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "Sell"

[node name="GoldDisplay" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TransactionContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Gold: 0"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 32)
text = "Close"

